--- a/index.html
+++ b/index.html
@@ -40,37 +40,42 @@
 
     <main>
       <!-- Герой -->
+
       <section class="hero">
         <div class="container">
-          <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
-          <button type="button" class="service-order">Замовити послугу</button>
+          <div class="back-photo">
+            <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
+            <button type="button" class="service-order">
+              Замовити послугу
+            </button>
+          </div>
         </div>
       </section>
       <!-- Наші переваги  -->
       <section class="advantages">
         <div class="container">
           <ul class="advantages-list">
-            <li>
+            <li class="advantage-icon antenna-icon">
               <h3 class="advantages-title">УВАГА ДО ДЕТАЛЕЙ</h3>
               <p class="advantages-text">
                 Ідейні міркування, і навіть початок повсякденної роботи з
                 формування позиції.
               </p>
             </li>
-            <li>
+            <li class="advantage-icon">
               <h3 class="advantages-title">ПУНКТУАЛЬНІСТЬ</h3>
               <p class="advantages-text">
                 Завдання організації, особливо рамки і місце навчання кадрів
                 тягне у себе.
               </p>
             </li>
-            <li>
+            <li class="advantage-icon">
               <h3 class="advantages-title">ПЛАНУВАННЯ</h3>
               <p class="advantages-text">
                 Так само консультація з широким активом значною мірою зумовлює.
               </p>
             </li>
-            <li>
+            <li class="advantage-icon">
               <h3 class="advantages-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
               <p class="advantages-text">
                 Значимість цих проблем настільки очевидна, що реалізація
