--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
     <!-- Шапка -->
     <header class="head-box">
       <div class="container box-top">
-        <!-- <div class="box-top"> -->
         <a href="index.html" class="logo">
           <span class="web-word">Web</span
           ><span class="studio-word">Studio</span>
@@ -34,7 +33,6 @@
           </li>
           <li><a href="tel:+380961111111">+380961111111</a></li>
         </ul>
-        <!-- </div> -->
       </div>
     </header>
 
@@ -43,12 +41,8 @@
 
       <section class="hero">
         <div class="container">
-          <div class="back-photo">
-            <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
-            <button type="button" class="service-order">
-              Замовити послугу
-            </button>
-          </div>
+          <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
+          <button type="button" class="service-order">Замовити послугу</button>
         </div>
       </section>
       <!-- Наші переваги  -->
